# etanalyzer-cpp

./: .gitignore  .gitmodules  BAK-template.py  CMakeLists.txt  Makefile  Makefile.nostatic  MemoryPool.hpp  MemoryPool.inl  analyze.cpp  analyze_graph-MPR.py  basic_cycle_analyze.ini  basic_cycle_analyze.py  basic_merge_summary.ini  basic_merge_summary.py  classinfo.cpp  classinfo.h  clean01.py  create_supergraph.py  cycle_analyze.ini  cycle_analyze.py  dgroup_analyze-MPR.py  dgroup_analyze.py  dgroup_config.ini  docopy-bhole.sh  docopy-whole.sh  execution.cpp  execution.h  extract_types.ini  extract_types.py  garbology.py  garbology_test.py  get_dgroup_types.py  heap-DB.cpp  heap-DB.hpp  heap.cpp  heap.h  lastmap.cpp  lastmap.h  massrename.py  mem_pool.h  (+32 more)
0-magic-copy/: heap.h  simulator.cpp
0-simulator-GC/: CMakeLists.txt  Makefile  analyze.cpp  create-version-cpp.sh  func_record.h  heap.cpp  heap.h  memorymgr.cpp  memorymgr.h  simulator-GC-ver2.cpp  simulator-GC.cpp  simulator-PAGC-ver1.cpp  simulator-livesize.cpp  tokenizer.cpp
0-simulator-GC/BAK/: Makefile
1-simulator-edges/: Makefile  heap.cpp  heap.h  memorymgr.h  refstate.h  simulator-edges  simulator-edges.cpp
2-simulator-context/: Makefile  heap.cpp  simulator-context.cpp  summary.hpp  tokenizer.h
3-PAGC-simulator/: CMakeLists.txt  PAGC-analysis-notes-1.txt  classinfo.cpp  classinfo.h  execution.cpp  process_PAGCFUNC_data.py  simulator-PAGC-func-1.cpp  simulator-PAGC-model-1.cpp  simulator-PAGC-model-2.cpp  simulator-PAGC-ver1.cpp  simulator-PAGC-ver2.cpp  simulator-PAGC-ver3-B.cpp  simulator-PAGC-ver3.cpp
3-PAGC-simulator/EXAMPLES/: batik-PAGC-FUNC-select-1.csv  batik-PAGC-FUNC.csv
4-cycle-simulator/: CMakeLists.txt  heap.cpp  simulator-ver2.cpp
5-simulator-ETonly/: CMakeLists.txt
6-simulator-MERLIN/: boost_1_60_0  simulator.cpp
7-simulator-onward/: CMakeLists.txt  heap-DB.hpp  heap.cpp  heap.h  simulator-DB.cpp  simulator-find-main.cpp  simulator-pool.cpp  simulator.cpp
CONFIG/: _201_compress.main.ini  _202_jess.main.ini  _205_raytrace.main.ini  _209_db.main.ini  _213_javac.main.ini  _222_mpegaudio.main.ini  _227_mtrt.main.ini  _228_jack.main.ini  avrora.main.ini  batik.main.ini  eclipse.main.ini  fop.main.ini  h2.main.ini  jython.main.ini  luindex.main.ini  lusearch.main.ini  specjbb.main.ini  sunflow.main.ini  tomcat.main.ini  xalan.main.ini
DATA/: _201_compress-main.txt  _209_db-main.txt  _213_javac-main.txt  _222_mpegaudio-main.txt  _227_mtrt-main.txt  avrora-main.txt  batik-main.txt  jython-main.txt  luindex-main.txt  lusearch-main.txt  sunflow-main.txt  tomcat-main.txt  xalan-main.txt
JAVA/debug_roots/: build.gradle
JAVA/debug_roots/src/main/java/net/veroy/analysis/etracks/: DebugRoots.java  EdgeRecord.java
JAVA/save_edge_age/: build.gradle
JAVA/save_edge_age/src/main/java/net/veroy/analysis/etracks/: SaveEdgeAge.java  UpdateDtime.java
JAVA/save_edge_info/: build.gradle
JAVA/save_edge_info/src/main/java/net/veroy/analysis/etracks/: EdgeRecord.java  SaveEdgeInfo.java  UpdateRecord.java
JAVA/save_object_info/: build.gradle  gradle.properties
JAVA/save_object_info/src/main/java/net/veroy/analysis/etracks/: GuavaCacheTest02.java  ObjectRecord.java  SaveObjectInfo.java
JAVA/update_dtime/: build.gradle
JAVA/update_dtime/src/main/java/net/veroy/analysis/etracks/: UpdateDtime.java
Python/: analyze_dgroup.py  analyze_sah.py  csvinfo2db.py  cycle_analyze.py  debug_object.py  dgroups2db.py  etparse.py  garbology.py  gcsim_graph.py  get_mains.py  hist-02.py  mypytools.py  process_PAGCFUNC_data-ver2.py  process_PAGCFUNC_data-ver3.py  process_PAGCFUNC_data.py  process_PAGC_data.py  process_cycle_data.py  process_simGC_files.py  readintodb.py  run_GCsim.py  run_hist-02.py  run_simfindmain.sh  scrape_gcsim.py  sqlite3tools.py  sqorm.py  stability2db.py  strace.py  verify_traces.py
Redis/: redis.conf
Rgraph/: histogram.R  ismm2017-plot-NOLABEL.R  ismm2017-plot.R  object_barplot.R  plot_groups.R  raw-plot.R  renderGML.R  renderGraphML.R  tables-from-raw-2017.R  tables-onward2017-by-bmark.R  tables-onward2017.R  tables.R
Scala/: get_dgroup_types.scala
TEMP/: EASTL
z-ARCHIVE/: Makefile  run_GC_sim-OLD.py
z-DEL/: dgroup_config.ini
z-NOT-USED/: clean-dtimes-old-code.py  cycle_analyze.py  save_code.py
